--- a/src/App.css
+++ b/src/App.css
@@ -230,3 +230,22 @@
   cursor: pointer;
   text-decoration: underline;
 }
+.fr-div{
+  cursor: pointer;
+}
+.email-check-div, .loader-div{
+  background: linear-gradient(179.4deg, rgb(197, 187, 181) 2.2%, rgb(255, 194, 203) 96.2%);
+}
+.email-div{
+  height: auto;
+  background-color: white;
+  padding: 20px 40px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+.loader-div, .error-div, .msg-div{
+  background: linear-gradient(179.4deg, rgb(197, 187, 181) 2.2%, rgb(255, 194, 203) 96.2%);
+}
+.txt-err{
+  color: black;
+}
